# test_stdexec

./: .gitignore  CMakeLists.txt  comp.sh
src/: main.cpp
